--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Demo Webpack setup",
   "main": "index.js",
   "scripts": {
+    "bundle": "webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,7 +18,16 @@
   },
   "homepage": "https://github.com/Patriciadburns1/webpack-demo#readme",
   "devDependencies": {
+    "css-loader": "^1.0.0",
+    "express": "^4.16.3",
+    "file-loader": "^1.1.11",
+    "inline-source-map": "^0.6.2",
+    "style-loader": "^0.21.0",
     "webpack": "^4.16.4",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-middleware": "^3.1.3"
+  },
+  "dependencies": {
+    "jquery": "^3.3.1"
   }
 }
